Bug 1673006 - [css-flexbox] Propagate the flex-shrink/flex-grow/flex-basis style to the table-wrapper box.
This avoids overlapping of table styled elements inside flexboxes as used on
some websites.

--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -50,6 +50,9 @@
   backface-visibility: inherit;
   clip: inherit;
   /* When the table wrapper is a Flex/Grid item we need these: */
+  flex-grow: inherit;
+  flex-shrink: inherit;
+  flex-basis: inherit;
   align-self: inherit;
   justify-self: inherit;
   grid-column-start: inherit;
